Stworzenie wstępne skryptu startowego .jar i .exe